[package]
name = "records-rust"
version = "0.1.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.1"
actix-files = "0.1.0-beta.1"

bytes = "0.4"
env_logger = "0.6"
futures = "0.1"

serde = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.3.1"
serde_derive = "1.0"

chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "^1.1.0", features = ["mysql", "chrono", "r2d2"] }
r2d2 = "0.8"

juniper = "0.12.0"