[package]
name = "records-rust"
version = "0.1.0"
authors = ["Vincent Parizet <vincent.parizet@hotmail.fr>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.3"

bytes = "0.4.12"
env_logger = "0.6.2"
futures = "0.1.28"

serde = "1.0.97"
serde_json = "1.0.40"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.97"

chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["mysql", "chrono", "r2d2"] }
r2d2 = "0.8.5"

juniper = "0.12.0"
actix-cors = "0.1.0"
dotenv = "0.14.1"
